--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"format": "prettier . --single-quote --list-different",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
 		"prepare": "husky"
@@ -27,7 +27,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"husky": "^9.0.11",
-		"prettier": "^3.1.1",
+		"prettier": "^3.3.0",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
