--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
+		"lint": "eslint .",
 		"format": "prettier . --single-quote --list-different",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
